--- a/.env
+++ b/.env
@@ -1,1 +1,12 @@
-aaa=bbb
+NODE_ENV=development
+PORT=5000
+COOKIE_SIGNATURE_SECRET=very_secret
+
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DATABASE=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+
+JWT_EXPIRES_IN=3600
+JWT_SECRET=jwt_very_secret
