--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ lerna-debug.log*
 
 # env configs
 .env.development
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
