--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ ADDRESS=0.0.0.0
 PORT=5000
 COOKIE_SIGNATURE_SECRET=very_secret
 
-POSTGRES_HOST=localhost
+POSTGRES_HOST=database-1.ccvsdovde1lq.eu-central-1.rds.amazonaws.com
 POSTGRES_PORT=5432
 POSTGRES_DATABASE=postgres
 POSTGRES_USER=postgres
