--- a/.env
+++ b/.env
@@ -3,11 +3,18 @@ ADDRESS=0.0.0.0
 PORT=5000
 COOKIE_SIGNATURE_SECRET=very_secret
 
-POSTGRES_HOST=database-1.ccvsdovde1lq.eu-central-1.rds.amazonaws.com
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DATABASE=postgres
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_PASSWORD=postgres_env
 
 JWT_EXPIRES_IN=3600
 JWT_SECRET=jwt_very_secret
+#TYPEORM_CONNECTION=postgres
+#TYPEORM_HOST=localhost
+#TYPEORM_USERNAME=postgres
+#TYPEORM_PASSWORD=postgres
+#TYPEORM_DATABASE=postgres
+#TYPEORM_PORT=5432
+#TYPEORM_ENTITIES = src/*/entities/*.ts
